Jerome's code challenge

--- a/web/config/yote.scss
+++ b/web/config/yote.scss
@@ -15,3 +15,5 @@
 
 @import "resources/flow/flowGlobalStyles";
 @import "resources/note/noteGlobalStyles";
+
+@import "global/components/forms/formStyles";
